Revise title and enhance webpage styling
Updated the title and added modern styling to the webpage.

--- a/index.html
+++ b/index.html
@@ -2,10 +2,57 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Mi sitio</title>
+  <title>Mi web pro</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #0a0a0a;
+      color: white;
+      text-align: center;
+    }
+
+    header {
+      padding: 20px;
+      font-size: 20px;
+      background: rgba(0,0,0,0.6);
+      backdrop-filter: blur(10px);
+    }
+
+    .card {
+      background: #0f0f0f;
+      border-radius: 20px;
+      margin: 40px auto;
+      padding: 30px;
+      width: 80%;
+      max-width: 500px;
+      box-shadow: 0 0 30px rgba(255,255,255,0.05);
+      transition: transform 0.3s;
+    }
+
+    .card:hover {
+      transform: scale(1.03);
+    }
+
+    button {
+      background: white;
+      color: black;
+      border: none;
+      padding: 12px 24px;
+      border-radius: 10px;
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body>
-  <h1>Hola 👋 Esta es mi primera web</h1>
-  <p>Hecha por Teo</p>
+
+<header>✨ Mi sitio estilo moderno</header>
+
+<div class="card">
+  <h1>Bienvenido</h1>
+  <p>Esta es una página con estilo pro.</p>
+  <button>Descargar</button>
+</div>
+
 </body>
 </html>
