--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Yuki external</title>
 
+  <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="icon.ico">
 
   <style>
@@ -20,33 +21,33 @@
       overflow-x: hidden;
     }
 
-    /* Texto arriba a la izquierda */
-    .top-left-title {
+    /* Logo + texto arriba */
+    .top-left {
       position: fixed;
       top: 20px;
-      left: 25px;
+      left: 50px;
+      display: flex;
+      align-items: center;
+      gap: 10px;
       font-size: 20px;
       font-weight: bold;
-      opacity: 0.9;
-      letter-spacing: 0.5px;
       z-index: 1000;
     }
 
-    header {
-      padding: 20px;
-      font-size: 22px;
-      background: rgba(0, 0, 0, 0.4);
-      backdrop-filter: blur(10px);
-      text-align: center;
+    .top-left img {
+      width: 24px;
+      height: 24px;
     }
 
     h1 {
-      margin-top: 100px;
+      margin-top: 120px;
+      text-align: center;
       font-size: 48px;
       animation: fadeIn 1.4s ease;
     }
 
     p {
+      text-align: center;
       opacity: 0.7;
       margin-bottom: 30px;
       animation: fadeIn 2s ease;
@@ -99,10 +100,11 @@
 </head>
 <body>
 
-<!-- Título arriba a la izquierda -->
-<div class="top-left-title">Yuki external</div>
-
-<header>🚀 Mi Web Animada</header>
+<!-- Logo + texto arriba a la izquierda -->
+<div class="top-left">
+  <img src="icon.ico" alt="icono">
+  <span>Yuki external</span>
+</div>
 
 <h1>Bienvenido</h1>
 <p>Ahora con animaciones y botones pro</p>
