--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      font-family: "Segoe UI", Arial, sans-serif;
+      font-family: Arial, sans-serif;
     }
 
     body {
-      background: #0b0e14;
-      color: #ffffff;
+      background: #2f2f2f;
+      color: #eaeaea;
       overflow-x: hidden;
     }
 
-    /* Top left title */
+    /* Top left logo */
     .top-left {
       position: fixed;
       top: 15px;
@@ -27,18 +27,18 @@
       display: flex;
       align-items: center;
       gap: 10px;
-      font-size: 16px;
+      font-size: 15px;
       font-weight: bold;
       opacity: 0;
       animation: fadeIn 1s forwards;
     }
 
     .top-left img {
-      width: 22px;
-      height: 22px;
+      width: 20px;
+      height: 20px;
     }
 
-    /* Center content */
+    /* Hero center */
     .center {
       min-height: 100vh;
       display: flex;
@@ -46,17 +46,17 @@
       align-items: center;
       justify-content: center;
       text-align: center;
-      animation: slideUp 1s ease forwards;
+      animation: slideUp 0.8s ease forwards;
     }
 
     .title {
-      font-size: 42px;
+      font-size: 40px;
       margin-bottom: 10px;
     }
 
     .subtitle {
       font-size: 18px;
-      color: #aaa;
+      color: #cfcfcf;
       margin-bottom: 35px;
     }
 
@@ -69,24 +69,24 @@
     }
 
     .btn {
-      background: #5865f2;
+      background: #3b3b3b;
       color: white;
       text-decoration: none;
       padding: 14px 20px;
-      border-radius: 10px;
+      border-radius: 8px;
       font-weight: 600;
       font-size: 16px;
-      transition: transform 0.15s ease, box-shadow 0.15s ease;
+      transition: all 0.15s ease;
       display: flex;
       align-items: center;
       justify-content: center;
       gap: 10px;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.4);
+      border: 1px solid #555;
     }
 
     .btn:hover {
-      transform: translateY(-2px) scale(1.03);
-      box-shadow: 0 0 15px rgba(88,101,242,0.6);
+      background: #4a4a4a;
+      transform: translateY(-2px);
     }
 
     .btn img {
@@ -99,17 +99,16 @@
       height: 28px !important;
     }
 
-    /* Animations */
     @keyframes fadeIn {
       to { opacity: 1; }
     }
 
     @keyframes slideUp {
-      from { transform: translateY(40px); opacity: 0; }
+      from { transform: translateY(30px); opacity: 0; }
       to { transform: translateY(0); opacity: 1; }
     }
 
-    /* Feature section */
+    /* Feature list section */
     .features {
       padding: 80px 20px;
       text-align: center;
@@ -129,14 +128,14 @@
     <span>Yuki external</span>
   </div>
 
-  <!-- Main section -->
+  <!-- Main content -->
   <div class="center">
     <div class="title">Hey, not on yuki yet?</div>
     <div class="subtitle">Check our socials!</div>
 
     <div class="buttons">
       <a href="https://www.youtube.com/@romajikaigi" target="_blank" class="btn">
-        <img src="youtube.png" class="yt-icon">
+        <img src="youtube.png" class="yt-icon" alt="yt">
         YouTube channel
       </a>
 
