--- a/index.html
+++ b/index.html
@@ -1,154 +1,1 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <title>Yuki External</title>
-  <link rel="icon" type="image/x-icon" href="icon.ico">
-
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: Arial, sans-serif;
-    }
-
-    body {
-      background: #2f2f2f;
-      color: #eaeaea;
-      overflow-x: hidden;
-    }
-
-    /* Top left logo */
-    .top-left {
-      position: fixed;
-      top: 15px;
-      left: 20px;
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      font-size: 15px;
-      font-weight: bold;
-      opacity: 0;
-      animation: fadeIn 1s forwards;
-    }
-
-    .top-left img {
-      width: 20px;
-      height: 20px;
-    }
-
-    /* Hero center */
-    .center {
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      animation: slideUp 0.8s ease forwards;
-    }
-
-    .title {
-      font-size: 40px;
-      margin-bottom: 10px;
-    }
-
-    .subtitle {
-      font-size: 18px;
-      color: #cfcfcf;
-      margin-bottom: 35px;
-    }
-
-    /* Buttons */
-    .buttons {
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-      width: 260px;
-    }
-
-    .btn {
-      background: #3b3b3b;
-      color: white;
-      text-decoration: none;
-      padding: 14px 20px;
-      border-radius: 8px;
-      font-weight: 600;
-      font-size: 16px;
-      transition: all 0.15s ease;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 10px;
-      border: 1px solid #555;
-    }
-
-    .btn:hover {
-      background: #4a4a4a;
-      transform: translateY(-2px);
-    }
-
-    .btn img {
-      width: 20px;
-      height: 20px;
-    }
-
-    .yt-icon {
-      width: 28px !important;
-      height: 28px !important;
-    }
-
-    @keyframes fadeIn {
-      to { opacity: 1; }
-    }
-
-    @keyframes slideUp {
-      from { transform: translateY(30px); opacity: 0; }
-      to { transform: translateY(0); opacity: 1; }
-    }
-
-    /* Feature list section */
-    .features {
-      padding: 80px 20px;
-      text-align: center;
-    }
-
-    .features h2 {
-      font-size: 32px;
-      margin-bottom: 20px;
-    }
-  </style>
-</head>
-<body>
-
-  <!-- Top left label -->
-  <div class="top-left">
-    <img src="icon.ico" alt="icon">
-    <span>Yuki external</span>
-  </div>
-
-  <!-- Main content -->
-  <div class="center">
-    <div class="title">Hey, not on yuki yet?</div>
-    <div class="subtitle">Check our socials!</div>
-
-    <div class="buttons">
-      <a href="https://www.youtube.com/@romajikaigi" target="_blank" class="btn">
-        <img src="youtube.png" class="yt-icon" alt="yt">
-        YouTube channel
-      </a>
-
-      <a href="https://discord.com/invite/nTKaE7hsh6" target="_blank" class="btn">
-        Download
-      </a>
-    </div>
-  </div>
-
-  <!-- Feature list -->
-  <div class="features">
-    <h2>Feature list</h2>
-  </div>
-
-</body>
-</html>
+<!DOCTYPE html> <html lang="es"> <head> <meta charset="UTF-8"> <title>Yuki external</title> <!-- Favicon --> <link rel="icon" type="image/x-icon" href="icon.ico"> <style> * { margin: 0; padding: 0; box-sizing: border-box; font-family: Arial, sans-serif; } body { background: radial-gradient(circle at top, #111, #000); color: white; overflow-x: hidden; } /* Logo arriba a la izquierda */ .top-left { position: fixed; top: 20px; left: 50px; display: flex; align-items: center; gap: 10px; font-size: 20px; font-weight: bold; z-index: 1000; } .top-left img { width: 24px; height: 24px; } h1 { margin-top: 120px; text-align: center; font-size: 48px; animation: fadeIn 1.4s ease; } p { text-align: center; opacity: 0.7; margin-bottom: 30px; animation: fadeIn 2s ease; } .buttons { display: flex; justify-content: center; gap: 20px; flex-wrap: wrap; animation: slideUp 1.2s ease; } .btn { background: white; color: black; border: none; padding: 14px 28px; border-radius: 14px; font-size: 16px; cursor: pointer; transition: all 0.2s ease; display: flex; align-items: center; gap: 10px; text-decoration: none; } .btn:hover { transform: scale(1.08); box-shadow: 0 0 20px rgba(255,255,255,0.2); } .btn img { width: 20px; height: 20px; } .card { margin: 60px auto; padding: 40px; background: #0b0b0b; border-radius: 25px; max-width: 700px; box-shadow: 0 0 40px rgba(255,255,255,0.03); animation: fadeIn 2.5s ease; } /* Sección scrolleable */ .features { margin-top: 80px; padding: 60px 20px 100px; text-align: center; } .features h2 { font-size: 42px; margin-bottom: 40px; animation: fadeIn 1.5s ease; } @keyframes fadeIn { from { opacity: 0; transform: translateY(30px); } to { opacity: 1; transform: translateY(0); } } @keyframes slideUp { from { opacity: 0; transform: translateY(50px); } to { opacity: 1; transform: translateY(0); } } </style> </head> <body> <!-- Logo --> <div class="top-left"> <img src="icon.ico" alt="icono"> <span>Yuki external</span> </div> <h1>Hey, not on yuki yet?</h1> <p>Check our socials!</p> <div class="buttons"> <!-- Botón YouTube --> <a href="#" class="btn"> <img src="youtube.png" alt="yt-icon"> YouTube channel </a> <!-- Botón Download (Discord) --> <a href="https://discord.com/invite/nTKaE7hsh6" target="_blank" class="btn"> Download </a> </div> <div class="card"> <h2>Welcome</h2> <p>This is your main content card.</p> </div> <!-- Sección nueva --> <div class="features"> <h2>Feature list</h2> </div> </body> </html>
