--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
 <div class="card">
   <h2>Welcome</h2>
   <p>This is your main content card.</p>
+
+  <h3 style="margin-top: 30px; font-size: 28px;">Feature list</h3>
 </div>
 
 <div class="features">
