--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
 
 </div>
 
-<div class="card">
-  <h2>Welcome</h2>
-  <p>This is your main content card.</p>
-
-  <h3 style="margin-top: 30px; font-size: 28px;">Feature list</h3>
+<div class="card" style="text-align: center;">
+  <h2>100% Free and Keyless.</h2>
+  <p style="font-size: 13px; opacity: 0.6;">
+    betas and paid versions sold by separate
+  </p>
 </div>
 
 <div class="features">
