--- a/index.html
+++ b/index.html
@@ -3,17 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Yuki external</title>
-
-  <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="icon.ico">
 
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: Arial, sans-serif;
-    }
+    * { margin: 0; padding: 0; box-sizing: border-box; font-family: Arial, sans-serif; }
 
     body {
       background: radial-gradient(circle at top, #111, #000);
@@ -21,7 +14,6 @@
       overflow-x: hidden;
     }
 
-    /* Logo arriba a la izquierda */
     .top-left {
       position: fixed;
       top: 20px;
@@ -34,25 +26,20 @@
       z-index: 1000;
     }
 
-    .top-left img {
-      width: 24px;
-      height: 24px;
-    }
+    .top-left img { width: 24px; height: 24px; }
 
     h1 {
       margin-top: 120px;
       text-align: center;
       font-size: 48px;
       animation: fadeIn 1.4s ease;
-      position: relative;
-      display: inline-block;
       width: 100%;
     }
 
     .small-text {
       font-size: 16px;
       opacity: 0.6;
-      margin-left: 10px;
+      margin-left: 8px;
     }
 
     p {
@@ -73,7 +60,6 @@
     .btn {
       background: white;
       color: black;
-      border: none;
       padding: 14px 28px;
       border-radius: 14px;
       font-size: 16px;
@@ -90,10 +76,7 @@
       box-shadow: 0 0 20px rgba(255,255,255,0.2);
     }
 
-    .btn img {
-      width: 20px;
-      height: 20px;
-    }
+    .btn img { width: 20px; height: 20px; }
 
     .card {
       margin: 60px auto;
@@ -106,7 +89,6 @@
       text-align: center;
     }
 
-    /* Sección scrolleable */
     .features {
       margin-top: 80px;
       padding: 60px 20px 100px;
@@ -116,10 +98,8 @@
     .features h2 {
       font-size: 42px;
       margin-bottom: 40px;
-      animation: fadeIn 1.5s ease;
     }
 
-    /* Tarjeta grande para Features */
     .feature-card {
       margin: 0 auto;
       padding: 60px 50px;
@@ -127,6 +107,19 @@
       border-radius: 30px;
       max-width: 900px;
       box-shadow: 0 0 80px rgba(255,255,255,0.07);
+      text-align: left;
+    }
+
+    .feature-card ul {
+      list-style: none;
+      padding-left: 0;
+      font-size: 16px;
+      line-height: 1.8;
+    }
+
+    .feature-card li::before {
+      content: "– ";
+      opacity: 0.6;
     }
 
     @keyframes fadeIn {
@@ -142,49 +135,58 @@
 </head>
 <body>
 
-<!-- Logo -->
 <div class="top-left">
-  <img src="icon.ico" alt="icono">
+  <img src="icon.ico">
   <span>Yuki external</span>
 </div>
 
-<!-- Título principal -->
 <h1>
-  Do you need a free roblox external
+  Do you need a free roblox external?
   <span class="small-text">(I gotchu)</span>
 </h1>
 
 <p>Check our socials!</p>
 
 <div class="buttons">
-
-  <!-- Botón YouTube -->
   <a href="https://www.youtube.com/@romajikaigi" target="_blank" class="btn">
-    <img src="youtube.png" alt="yt-icon">
+    <img src="youtube.png">
     YouTube channel
   </a>
 
-  <!-- Botón Download (Discord) -->
   <a href="https://discord.com/invite/nTKaE7hsh6" target="_blank" class="btn">
     Download
   </a>
-
 </div>
 
-<!-- Tarjeta principal -->
 <div class="card">
   <h2>100% Free and Keyless.</h2>
-  <p style="font-size: 13px; opacity: 0.6;">
-    (betas and paid versions sold by separate)
-  </p>
+  <p style="font-size:13px;opacity:.6;">(betas and paid versions sold by separate)</p>
 </div>
 
-<!-- Features -->
 <div class="features">
   <h2>Feature list</h2>
 
   <div class="feature-card">
-    <p style="opacity: 0.6;">Coming soon...</p>
+    <ul>
+      <li>One of the most optimized Python externals</li>
+      <li>Yuki uses ctypes to be faster than the others</li>
+
+      <br><strong>AIMBOT FEATURES:</strong><br><br>
+
+      <li>Smooth Mouse aimbot (Uses SendInput and doesnt write on memory, there are also 3 modes of Mouse aimbot)</li>
+      <li>Smooth camera aimbot (Strong and smooth like a C++ external)</li>
+      <li>Good prediction system (X and Y axis, natural mode)</li>
+      <li>Smoothness system (X and Y axis, and smooth in every mode)</li>
+      <li>2 Different shake systems</li>
+
+      <br><strong>MISC:</strong><br><br>
+
+      <li>Random predictions / flicks system</li>
+      <li>360 flip</li>
+      <li>Walkspeed</li>
+      <li>Health check and knocked check</li>
+      <li>Config system</li>
+    </ul>
   </div>
 </div>
 
