--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
       <br><strong>AIMBOT FEATURES:</strong><br><br>
 
-      <li>Smooth Mouse aimbot (Uses SendInput and doesnt write on memory, there are also 3 modes of Mouse aimbot)</li>
+      <li>Smooth Mouse aimbot (Uses SendInput and doesn't write on memory, there are also 3 modes of Mouse aimbot)</li>
       <li>Smooth camera aimbot (Strong and smooth like a C++ external)</li>
       <li>Good prediction system (X and Y axis, natural mode)</li>
       <li>Smoothness system (X and Y axis, and smooth in every mode)</li>
