--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
     <ul>
       <li>One of the most optimized Python externals</li>
       <li>Yuki uses ctypes to be faster than the others</li>
+      <li>Active for +7 months! (Server got nuked 3 times and .gg/yeno too, so yeah...)</li>
 
       <br><strong>AIMBOT FEATURES:</strong><br><br>
 
